environments/example-credentials/services/kc-ui/base/config/deployment.yaml
---
# Source: kc-ui/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "kc-ui-deployment"
  labels:
    chart: 'kc-ui-1.0.0'
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: kc-ui
      release: release-name
  template:
    metadata:
      labels:
        app: kc-ui
        release: release-name
    spec:
      serviceAccountName: kcontainer-runtime
      containers:
      - name: "kc-ui"
        image: "ibmcase/kcontainer-ui:latest"
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /healthz
            port: 3010
          initialDelaySeconds: 3000
          periodSeconds: 1000
        ports:
        - containerPort: 3010
        resources:
          requests:
            cpu: "200m"
            memory: "300Mi"
